# linkedin_job_search

./: README.md  pyproject.toml  report.md  trained_agents_data.pkl  training_data.pkl
src/linkedin_job_search/: crew.py  main.py
src/linkedin_job_search/config/: agents.yaml  tasks.yaml
src/linkedin_job_search/tools/: client.py
