[tool.poetry]
name = "linkedin_job_search"
version = "0.1.0"
description = "linkedin_job_search using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }
selenium = "^4.21.0"

[tool.poetry.scripts]
linkedin_job_search = "linkedin_job_search.main:run"
train = "linkedin_job_search.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
